--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ log.net.path=logs/net
 ########## 查询jjc作业接口
 pcrdfans.open=false
 pcrdfans.url=https://api.pcrdfans.com/x/v1/search
-pcrdfans.key=
+pcrdfans.key=null
 pcr.default.nicknamefile=https://raw.githubusercontent.com/pcrbot/pcr-nickname/master/nicknames_zh-cn.csv
 pcr.default.nickname=https://github.com/pcrbot/pcr-nickname/blob/master/nicknames_zh-cn.csv
 
@@ -23,3 +23,14 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 # 开发阶段务必关闭缓存 (=false)
 spring.thymeleaf.cache=false
+
+# 需要登录的qq号
+bot.account=1586197314
+# 上面那个qq号的密码
+bot.pwd=316089.qaz
+# 配置一个唯一admin,可以配合 权限指令远程做一些对于bot的敏感操作
+bot.admin=1072065168
+
+# 访问web服务所用的 url (域名/ip) , 本bot web端口使用28282,访问时想改变可以用nginx指定一个自定端口至28282
+site.url=http://127.0.0.1:28282
+
