调整幸运角色决斗事件

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 cache/
 botData.db
 deviceInfo.json
+device.json
 src/main/resources/application.properties
 src/main/resources/application.yml
 .idea/
