--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <id>jcenter</id>
             <url>https://jcenter.bintray.com/</url>
         </repository>
+
+        <repository>
+            <id>miraisnapshots</id>
+            <name>mirai snapshots</name>
+            <url>https://repo.mirai.mamoe.net/snapshots</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -45,12 +51,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.plexpt</groupId>
-            <artifactId>chatgpt</artifactId>
-            <version>1.1.2</version>
         </dependency>
 
         <dependency>
@@ -110,11 +110,17 @@
             <version>0.5.9</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>net.mamoe</groupId>-->
+<!--            <artifactId>mirai-core-all</artifactId>-->
+<!--            <version>2.15.0-M1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>net.mamoe</groupId>
-            <artifactId>mirai-core-all</artifactId>
-            <version>2.14.0</version>
-            <scope>provided</scope>
+            <artifactId>mirai-core-jvm</artifactId>
+            <version>2.15.0-dev-98</version>
         </dependency>
 
         <!--  https://github.com/WhiteMagic2014/gpt-magic-plus  -->
@@ -128,20 +134,21 @@
         <dependency>
             <groupId>com.github.cssxsh</groupId>
             <artifactId>fix-protocol-version</artifactId>
-            <version>1.5.1</version>
+            <version>1.7.1</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/fix-protocol-version-1.5.1.mirai2.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <systemPath>${project.basedir}/lib/fix-protocol-version-1.7.1.mirai2.jar</systemPath>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.18</version>
         </dependency>
     </dependencies>
 
