--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.whitemagic2014</groupId>
     <artifactId>WMagicBotR</artifactId>
-    <version>1.7.2</version>
+    <version>1.8.0</version>
     <name>WMagicBotR</name>
     <description>magicbot reborn</description>
 
@@ -119,16 +119,11 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-all</artifactId>
-            <version>2.15.0</version>
+            <version>2.16.0</version>
             <scope>provided</scope>
         </dependency>
 
         <!--  https://github.com/WhiteMagic2014/gpt-magic-plus  -->
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>io.github.whitemagic2014</groupId>
@@ -157,11 +152,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.cssxsh</groupId>
-            <artifactId>fix-protocol-version</artifactId>
-            <version>1.9.4</version>
+            <groupId>top.mrxiaom</groupId>
+            <artifactId>qsign</artifactId>
+            <version>1.2.1-beta</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/fix-protocol-version-1.9.4.mirai2.jar</systemPath>
+            <systemPath>${project.basedir}/lib/qsign-1.2.1-beta-dev-5058a66.mirai2.jar</systemPath>
         </dependency>
 
         <dependency>
